name:                coin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Lupino/coin#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           2016 Li Meng Jun
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Coin
                     , Coin.Types
                     , Coin.DataSource.Coin
                     , Coin.DataSource.Table
                     , Coin.DataSource
                     , Coin.API
                     , Coin.UserEnv
                     , Coin.Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , unix-time
                     , mysql-simple
                     , text
                     , hashable
                     , resource-pool
                     , scotty
                     , haxl
                     , async
                     , dispatch-common
                     , bytestring

                     , time
  default-language:    Haskell2010

executable coin
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coin
                     , mtl
                     , scotty
                     , aeson
                     , text
                     , warp
                     , data-default-class
                     , streaming-commons
                     , wai-extra
                     , optparse-applicative
                     , haxl
                     , yaml
                     , bytestring
                     , http-types
  default-language:    Haskell2010

test-suite coin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , coin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/coin
